--- a/TYR_2.0_18.5/ui/TY_11_START_TEST_COF.ui
+++ b/TYR_2.0_18.5/ui/TY_11_START_TEST_COF.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1368</width>
-    <height>769</height>
+    <height>771</height>
    </rect>
   </property>
   <property name="baseSize">
@@ -880,7 +880,7 @@ color: rgb(255, 0, 0);</string>
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>30</x>
