--- a/TYR_2.0_18.5/ui/TY_27_START_TEST_MDR.ui
+++ b/TYR_2.0_18.5/ui/TY_27_START_TEST_MDR.ui
@@ -328,7 +328,7 @@
     <widget class="QLCDNumber" name="lcdNumber">
      <property name="geometry">
       <rect>
-       <x>300</x>
+       <x>410</x>
        <y>50</y>
        <width>81</width>
        <height>61</height>
@@ -352,7 +352,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLabel" name="label_13">
      <property name="geometry">
       <rect>
-       <x>300</x>
+       <x>410</x>
        <y>10</y>
        <width>81</width>
        <height>31</height>
@@ -415,7 +415,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>430</x>
+       <x>540</x>
        <y>10</y>
        <width>81</width>
        <height>31</height>
@@ -442,7 +442,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLCDNumber" name="lcdNumber_2">
      <property name="geometry">
       <rect>
-       <x>430</x>
+       <x>540</x>
        <y>50</y>
        <width>81</width>
        <height>61</height>
@@ -466,7 +466,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="Line" name="line_15">
      <property name="geometry">
       <rect>
-       <x>260</x>
+       <x>370</x>
        <y>0</y>
        <width>20</width>
        <height>131</height>
@@ -485,10 +485,10 @@ color: rgb(255, 0, 0);</string>
     <widget class="QToolButton" name="toolButton">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>51</width>
-       <height>51</height>
+       <x>270</x>
+       <y>30</y>
+       <width>81</width>
+       <height>81</height>
       </rect>
      </property>
      <property name="text">
@@ -500,36 +500,9 @@ color: rgb(255, 0, 0);</string>
      </property>
      <property name="iconSize">
       <size>
-       <width>50</width>
-       <height>50</height>
+       <width>100</width>
+       <height>100</height>
       </size>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_47">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>30</y>
-       <width>51</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(170, 0, 0);</string>
-     </property>
-     <property name="text">
-      <string>ON</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
     <widget class="QLabel" name="label_48">
@@ -559,60 +532,10 @@ color: rgb(255, 0, 0);</string>
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QToolButton" name="toolButton_2">
-     <property name="geometry">
-      <rect>
-       <x>130</x>
-       <y>20</y>
-       <width>51</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>../images/stop1.png</normaloff>../images/stop1.png</iconset>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>50</width>
-       <height>50</height>
-      </size>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_49">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>30</y>
-       <width>51</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(170, 0, 0);</string>
-     </property>
-     <property name="text">
-      <string>OFF</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-    </widget>
     <widget class="QLCDNumber" name="lcdNumber_3">
      <property name="geometry">
       <rect>
-       <x>560</x>
+       <x>670</x>
        <y>50</y>
        <width>81</width>
        <height>61</height>
@@ -636,7 +559,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>560</x>
+       <x>670</x>
        <y>10</y>
        <width>81</width>
        <height>31</height>
@@ -663,7 +586,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="Line" name="line_16">
      <property name="geometry">
       <rect>
-       <x>400</x>
+       <x>510</x>
        <y>0</y>
        <width>20</width>
        <height>131</height>
@@ -682,7 +605,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="Line" name="line_17">
      <property name="geometry">
       <rect>
-       <x>530</x>
+       <x>640</x>
        <y>0</y>
        <width>20</width>
        <height>131</height>
@@ -701,7 +624,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="Line" name="line_18">
      <property name="geometry">
       <rect>
-       <x>650</x>
+       <x>770</x>
        <y>0</y>
        <width>20</width>
        <height>131</height>
@@ -785,7 +708,7 @@ color: rgb(255, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>690</x>
+       <x>800</x>
        <y>20</y>
        <width>121</width>
        <height>41</height>
@@ -810,7 +733,7 @@ background-color: rgb(0, 180, 0);</string>
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>830</x>
+       <x>940</x>
        <y>20</y>
        <width>121</width>
        <height>41</height>
@@ -835,7 +758,7 @@ background-color: rgb(0, 180, 0);</string>
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>830</x>
+       <x>940</x>
        <y>70</y>
        <width>121</width>
        <height>41</height>
@@ -860,7 +783,7 @@ background-color: rgb(0, 180, 0);</string>
     <widget class="QPushButton" name="pushButton_8">
      <property name="geometry">
       <rect>
-       <x>690</x>
+       <x>800</x>
        <y>70</y>
        <width>121</width>
        <height>41</height>
@@ -1451,7 +1374,7 @@ background-color: rgb(0, 180, 0);</string>
        <x>883</x>
        <y>130</y>
        <width>20</width>
-       <height>341</height>
+       <height>301</height>
       </rect>
      </property>
      <property name="orientation">
@@ -1516,7 +1439,7 @@ background-color: rgb(0, 180, 0);</string>
        <x>1080</x>
        <y>130</y>
        <width>20</width>
-       <height>341</height>
+       <height>301</height>
       </rect>
      </property>
      <property name="orientation">
@@ -1700,73 +1623,6 @@ color: rgb(255, 255, 255);</string>
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="label_30">
-     <property name="geometry">
-      <rect>
-       <x>790</x>
-       <y>430</y>
-       <width>81</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(0, 0, 0);</string>
-     </property>
-     <property name="text">
-      <string>Test ID:</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_31">
-     <property name="geometry">
-      <rect>
-       <x>920</x>
-       <y>430</y>
-       <width>51</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(170, 0, 127);</string>
-     </property>
-     <property name="text">
-      <string>0021</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-    <widget class="Line" name="line_9">
-     <property name="geometry">
-      <rect>
-       <x>770</x>
-       <y>460</y>
-       <width>321</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_32">
      <property name="geometry">
       <rect>
@@ -1789,6 +1645,129 @@ color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string>Limits :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>20</y>
+       <width>71</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>ON</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_2">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>20</y>
+       <width>82</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>OFF</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_52">
+     <property name="geometry">
+      <rect>
+       <x>1050</x>
+       <y>550</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>10</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Elapsed Time :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_33">
+     <property name="geometry">
+      <rect>
+       <x>1160</x>
+       <y>550</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>9</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 0, 127);</string>
+     </property>
+     <property name="text">
+      <string>054</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_34">
+     <property name="geometry">
+      <rect>
+       <x>1220</x>
+       <y>550</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>9</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 0, 127);</string>
+     </property>
+     <property name="text">
+      <string>(Min)</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
