--- a/MDR/ui/MDR_07_CALIBRATION.ui
+++ b/MDR/ui/MDR_07_CALIBRATION.ui
@@ -401,40 +401,12 @@
      <property name="lineWidth">
       <number>3</number>
      </property>
-     <widget class="QLabel" name="label_26">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>211</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Arial</family>
-        <pointsize>12</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-        <underline>false</underline>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 127);</string>
-      </property>
-      <property name="text">
-       <string>Standered Value :</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="lineEdit">
       <property name="geometry">
        <rect>
-        <x>240</x>
+        <x>340</x>
         <y>30</y>
-        <width>191</width>
+        <width>111</width>
         <height>61</height>
        </rect>
       </property>
@@ -453,9 +425,9 @@
      <widget class="QLabel" name="label_29">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>130</y>
-        <width>191</width>
+        <x>20</x>
+        <y>30</y>
+        <width>131</width>
         <height>61</height>
        </rect>
       </property>
@@ -481,9 +453,9 @@
      <widget class="QLCDNumber" name="lcdNumber">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>130</y>
-        <width>191</width>
+        <x>180</x>
+        <y>30</y>
+        <width>121</width>
         <height>61</height>
        </rect>
       </property>
@@ -497,9 +469,9 @@
      <widget class="QLabel" name="label_31">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>220</y>
-        <width>161</width>
+        <x>20</x>
+        <y>150</y>
+        <width>131</width>
         <height>61</height>
        </rect>
       </property>
@@ -525,9 +497,9 @@
      <widget class="QLCDNumber" name="lcdNumber_2">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>220</y>
-        <width>191</width>
+        <x>180</x>
+        <y>150</y>
+        <width>121</width>
         <height>61</height>
        </rect>
       </property>
@@ -541,9 +513,9 @@
      <widget class="QLCDNumber" name="lcdNumber_3">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>320</y>
-        <width>191</width>
+        <x>180</x>
+        <y>270</y>
+        <width>121</width>
         <height>61</height>
        </rect>
       </property>
@@ -557,9 +529,9 @@
      <widget class="QLabel" name="label_33">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>320</y>
-        <width>151</width>
+        <x>10</x>
+        <y>270</y>
+        <width>141</width>
         <height>61</height>
        </rect>
       </property>
@@ -580,6 +552,130 @@
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_2">
+      <property name="geometry">
+       <rect>
+        <x>340</x>
+        <y>150</y>
+        <width>111</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>24</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_3">
+      <property name="geometry">
+       <rect>
+        <x>340</x>
+        <y>270</y>
+        <width>111</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>24</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="Line" name="line">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>350</y>
+        <width>491</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>2</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="Line" name="line_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>110</y>
+        <width>491</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>2</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="Line" name="line_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>230</y>
+        <width>491</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>2</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_4">
+      <property name="geometry">
+       <rect>
+        <x>340</x>
+        <y>370</y>
+        <width>111</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 180, 0);</string>
+      </property>
+      <property name="text">
+       <string>Set </string>
       </property>
      </widget>
     </widget>
@@ -611,37 +707,12 @@
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_4">
-     <property name="geometry">
-      <rect>
-       <x>880</x>
-       <y>550</y>
-       <width>81</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(0, 180, 0);</string>
-     </property>
-     <property name="text">
-      <string>Ok</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_14">
      <property name="geometry">
       <rect>
        <x>1000</x>
        <y>550</y>
-       <width>81</width>
+       <width>91</width>
        <height>31</height>
       </rect>
      </property>
@@ -664,7 +735,7 @@ color: rgb(255, 255, 255);</string>
     <widget class="QPushButton" name="pushButton_15">
      <property name="geometry">
       <rect>
-       <x>700</x>
+       <x>840</x>
        <y>550</y>
        <width>141</width>
        <height>31</height>
@@ -683,13 +754,13 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Callibreate</string>
+      <string>Callibrate</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_16">
      <property name="geometry">
       <rect>
-       <x>410</x>
+       <x>570</x>
        <y>550</y>
        <width>251</width>
        <height>31</height>
@@ -724,8 +795,8 @@ color: rgb(255, 255, 255);</string>
       <font>
        <family>Arial</family>
        <pointsize>10</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
+       <weight>75</weight>
+       <bold>true</bold>
        <underline>false</underline>
       </font>
      </property>
