--- a/ROLTA/ui/RL_01_START_TEST_EXPANSION.ui
+++ b/ROLTA/ui/RL_01_START_TEST_EXPANSION.ui
@@ -709,7 +709,7 @@ color: rgb(255, 0, 0);</string>
       <rect>
        <x>170</x>
        <y>120</y>
-       <width>71</width>
+       <width>131</width>
        <height>31</height>
       </rect>
      </property>
@@ -800,7 +800,7 @@ color: rgb(255, 0, 0);</string>
       <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>Specidied Yeild Strength (SMYS) :</string>
+      <string>Specified Yeild Strength (SMYS) :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -1284,7 +1284,7 @@ color: rgb(255, 0, 0);</string>
       <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>Extentiomenter No :</string>
+      <string>Extensometer No :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -1699,7 +1699,7 @@ color: rgb(255, 0, 0);</string>
       <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>Extensiometer Chain Length :</string>
+      <string>Extensometer Chain Length :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -1757,7 +1757,7 @@ color: rgb(255, 0, 0);</string>
      <property name="geometry">
       <rect>
        <x>900</x>
-       <y>170</y>
+       <y>160</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -1908,7 +1908,7 @@ color: rgb(255, 0, 0);</string>
       <rect>
        <x>650</x>
        <y>260</y>
-       <width>311</width>
+       <width>301</width>
        <height>31</height>
       </rect>
      </property>
@@ -2956,9 +2956,9 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLabel" name="label_16">
      <property name="geometry">
       <rect>
-       <x>1180</x>
+       <x>1220</x>
        <y>260</y>
-       <width>111</width>
+       <width>101</width>
        <height>31</height>
       </rect>
      </property>
@@ -3659,9 +3659,9 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>460</x>
-       <y>210</y>
+       <y>220</y>
        <width>121</width>
-       <height>31</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="font">
@@ -3679,9 +3679,9 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>330</x>
-       <y>210</y>
+       <y>220</y>
        <width>121</width>
-       <height>31</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="font">
@@ -3696,33 +3696,6 @@ color: rgb(255, 255, 255);</string>
      </property>
      <property name="checked">
       <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_19">
-     <property name="geometry">
-      <rect>
-       <x>330</x>
-       <y>180</y>
-       <width>91</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>9</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(170, 0, 127);</string>
-     </property>
-     <property name="text">
-      <string>Graph Type:</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
     <widget class="QLabel" name="label_23">
@@ -3774,6 +3747,108 @@ color: rgb(255, 0, 0);</string>
      </property>
      <property name="intValue" stdset="0">
       <number>100</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_141">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>180</y>
+       <width>121</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>Preload Pressure:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_45">
+     <property name="geometry">
+      <rect>
+       <x>470</x>
+       <y>180</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>13.58</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_142">
+     <property name="geometry">
+      <rect>
+       <x>530</x>
+       <y>180</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>(MPa)</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_24">
+     <property name="geometry">
+      <rect>
+       <x>960</x>
+       <y>260</y>
+       <width>221</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>8</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 85, 0);</string>
+     </property>
+     <property name="text">
+      <string>Report File Name : expansion_test_001.pdf</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
    </widget>
