--- a/ROLTA/ui/RL_01_START_TEST_EXPANSION.ui
+++ b/ROLTA/ui/RL_01_START_TEST_EXPANSION.ui
@@ -3749,6 +3749,33 @@ color: rgb(255, 0, 0);</string>
       <number>100</number>
      </property>
     </widget>
+    <widget class="QLabel" name="label_140">
+     <property name="geometry">
+      <rect>
+       <x>770</x>
+       <y>550</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>Preload  %:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
     <widget class="QLabel" name="label_141">
      <property name="geometry">
       <rect>
